Changes to mcmcplots version 0.4.2
* added argument "reorder" to caterplot which (when TRUE) reorders caterpillars according to their medians.
* added function rmeanplot (thanks to Evangelos Evangelou)
* added function rmeanplot1
* changed mcmcplot to use rmeanplot1 instead of autplot1(partial=TRUE)

Changes to mcmcplots version 0.4.1
* corrected errors in documentation

Changes to mcmcplots version 0.4
* convert.mcmc.list
  - added this function to help convert objects to mcmc.list objects.
* denplot, denoverplot1:
  - corrected a bug that would not recognize the "lwd" option when style="gray". (Thanks to Pei-Hsuan Chiu.)
  - added option "ci" to plot credible intervals.
* caterplot:
  - added the eps option which controls the spacing between chains (or density strips) when collapse=FALSE.
  - added the las option which controls the rotation of the parameter labels on the label axis. (Thanks to Jessi Brown for the idea.)
* mcmcplot, mcmcplot1, denoverplot1
  - added xlim and ylim options. (Thanks to Ilya Goldin for the idea.)
* denplot, corplot, denoverplot, traplot, caterplot
  - added the greek option which attemts to convert the names of greek letters in labels to greek characters on the plot.
* denoverplot
  - corrected bug that plotted a gray background for the legend when style="plain"
  - added option "ci" to plot credible intervals.
* traplot, denoverplot
  - added plot.title option and changed the functionality of the main option to match denplot
* mcmcplotsPalette
  - added option "type" which selects the type of color palette to create: rainbow, sequential, or grayscale. (Thanks to Ilya Goldin for the idea.)
  - deprecated "seq" option
* caterplot, mcmcplot, denplot, traplot
  - These functions now assign variable names (with a warning) when the mcmcout argument does not have valid variable names.
* parms2plot
  - simplified function logic (at least, that was my intent... maybe I just made things more complicated)
  - added "leaf.marker" option