@@ -1,1 +1,1 @@
-as.mcmc.rjags <- function(x) as.mcmc.bugs(x$BUGSoutput)
+as.mcmc.rjags <- function(x, ...) as.mcmc.bugs(x$BUGSoutput)
