@@ -4,10 +4,12 @@
   Autocorrelation Plot of MCMC Output
 }
 \description{
-  Creates an autocorrelation or partial autocorrelation plot of MCMC output.  
+  Creates an autocorrelation or partial autocorrelation plot of MCMC output.
 }
 \usage{
-autplot1(x, chain = 1, lag.max = NULL, partial = FALSE, col = mcmcplotsPalette(1), style = c("gray", "plain"), ylim = NULL, \dots)
+autplot1(x, chain = 1, lag.max = NULL, partial = FALSE,
+col = mcmcplotsPalette(1), style = c("gray", "plain"),
+ylim = NULL, \dots)
 }
 \arguments{
   \item{x}{an \code{mcmc.list} object with a single variable.}
@@ -41,7 +43,12 @@ autplot1(x, chain = 1, lag.max = NULL, partial = FALSE, col = mcmcplotsPalette(1
 nc <- 10; nr <- 1000
 pnames <- c(paste("alpha[", 1:5, "]", sep=""), paste("gamma[", 1:5, "]", sep=""))
 means <- rpois(10, 20)
-fakemcmc <- coda::as.mcmc.list(lapply(1:3, function(i) coda::mcmc(matrix(rnorm(nc*nr, rep(means,each=nr)), nrow=nr, dimnames=list(NULL,pnames)))))
+fakemcmc <-
+    coda::as.mcmc.list(
+        lapply(1:3,
+               function(i)
+                   coda::mcmc(matrix(rnorm(nc*nr, rep(means,each=nr)),
+                                     nrow=nr, dimnames=list(NULL,pnames)))))
 
 autplot1(fakemcmc[, "alpha[1]", drop=FALSE])
 autplot1(fakemcmc[, "alpha[1]", drop=FALSE], chain=2, style="plain")
