@@ -55,13 +55,17 @@ greek = FALSE, collapse = FALSE, style=c("gray", "plain"), \dots)
 nc <- 10; nr <- 1000
 pnames <- c(paste("alpha[", 1:5, "]", sep=""), paste("gamma[", 1:5, "]", sep=""))
 means <- rpois(10, 20)
-fakemcmc <- coda::as.mcmc.list(lapply(1:3, function(i) coda::mcmc(matrix(rnorm(nc*nr, rep(means,each=nr)), nrow=nr, dimnames=list(NULL,pnames)))))
+fakemcmc <- coda::as.mcmc.list(
+    lapply(1:3,
+           function(i) coda::mcmc(matrix(rnorm(nc*nr, rep(means,each=nr)),
+                                         nrow=nr, dimnames=list(NULL,pnames)))))
 
 ## Plot densities of the fake MCMC output
 denplot(fakemcmc)
 denplot(fakemcmc, style="plain")
 denplot(fakemcmc, collapse=TRUE, greek=TRUE, ci=0.95)
-denplot(fakemcmc, xlim=range(unlist(fakemcmc)), plot.title="Density plots of fake data.  Yawn.")
+denplot(fakemcmc, xlim=range(unlist(fakemcmc)),
+        plot.title="Density plots of fake data. Yawn.")
 denplot(fakemcmc, "gamma")
 denplot(fakemcmc, "gamma", "alpha\\\\[[12]]$") # all gamma and alpha[1] and alpha[2]
 
