@@ -40,7 +40,10 @@ colorpie(4, type="grayscale")
 nc <- 10; nr <- 1000
 pnames <- c(paste("alpha[", 1:5, "]", sep=""), paste("gamma[", 1:5, "]", sep=""))
 means <- rpois(10, 20)
-fakemcmc <- coda::as.mcmc.list(lapply(1:3, function(i) coda::mcmc(matrix(rnorm(nc*nr, rep(means,each=nr)), nrow=nr, dimnames=list(NULL,pnames)))))
+fakemcmc <- coda::as.mcmc.list(
+    lapply(1:3,
+           function(i) coda::mcmc(matrix(rnorm(nc*nr, rep(means,each=nr)),
+                                         nrow=nr, dimnames=list(NULL,pnames)))))
 
 denplot(fakemcmc)
 denplot(fakemcmc, style="plain", col=mcmcplotsPalette(3, type="sequential"))
